tests/snapshots/run_wpt_conformance__trtx_linear_float32_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "linear.https.any.js",
    "linear float32 3D tensor default options",
    "trtx",
    "PASS",
)
